# test_app_todo

./: .env.example  .gitignore  APP-READY.md  AUTH-FIX-COMPLETE.md  DATABASE-FIX-COMPLETE.md  Dockerfile  HOW-TO-TEST-APP.md  IMPLEMENTATION-SUMMARY.md  PHASE-II-AUTH-FIX.md  QUICKSTART-BACKEND.md  SERVERS-RUNNING.md  SERVERS-STATUS.md  SETUP-COMPLETE.md  TEST-RESULTS.md  add_sample_tasks.py  create_test_user.py  docker-compose.yml  pyproject.toml  test-auth.py  test-integration.js  test-integration.py  test_backend_auth.py  test_db_connection.py
.claude/agents/: auth-bridge-verifier.md  backend-api-builder.md  conversation-context-manager.md  database-guardian.md  dev-environment-validator.md  error-translator.md  frontend-app-builder.md  intent-resolver.md  mcp-tool-validator.md  phase-ii-orchestrator.md  spec-intelligence.md  tool-chain-orchestrator.md  user-context-guardian.md
.specify/memory/: constitution.md
backend/: README.md  auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/chat/: __init__.py  agent.py  service.py  tools.py
backend/routers/: auth.py  chat.py  tasks.py
backend/tests/: conftest.py  test_auth.py  test_tasks_creation.py  test_tasks_deletion.py  test_tasks_retrieval.py  test_tasks_update.py  test_user_isolation.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: add-task-modal.tsx  delete-confirm-dialog.tsx  edit-task-modal.tsx  empty-state.tsx  filter-tabs.tsx  task-card.tsx  task-form.tsx  task-list-skeleton.tsx  task-list.tsx
(+80 files in other folders)
